<resources>
    <string name="app_name">CollageTradeHub</string>
    <string name="discrete_mathematics_objectives_of_the_course_throughout_the_course_students_will_be_expected_to_demonstrate_their_understanding_of_discrete_mathematics_by_being_able_to_do_each_of_the_following_1_use_mathematically_correct_terminology_and_notation_2_construct_correct_direct_and_indirect_proofs_3_use_division_into_cases_in_a_proof_4_use_counter_examples_5_apply_logical_reasoning_to_solve_a_variety_of_problems_detailed_contents_module_i_lecture_6_hrs_sets_relation_and_function_operations_and_laws_of_sets_cartesian_products_binary_relation_partial_ordering_relation_equivalence_relation_image_of_a_set_sum_and_product_of_functions_bijective_functions_inverse_and_composite_function_size_of_a_set_finite_and_infinite_sets_countable_and_uncountable_sets_cantor_s_diagonal_argument_and_the_power_set_theorem_schroeder_bernstein_theorem_module_2_lecture_hrs_principles_of_mathematical_induction_the_well_ordering_principle_recursive_definition_the_division_algorithm_prime_numbers_the_greatest_common_divisor_euclidean_algorithm_the_fundamental_theorem_of_arithmetic_basic_counting_techniques_inclusion_and_exclusion_pigeon_hole_principle_permutation_and_combination_module_3_lecture_8_hrs_propositional_logic_syntax_semantics_validity_and_satisfiability_basic_connectives_and_truth_tables_logical_equivalence_the_laws_of_logic_logical_implication_rules_of_inference_the_use_of_quantifiers_proof_techniques_some_terminology_proof_methods_and_strategies_forward_proof_proof_by_contradiction_proof_by_contraposition_proof_of_necessity_and_sufficiency_module_4_lecture_8_hrs_algebraic_structures_and_morphism_algebraic_structures_with_one_binary_operation_semi_groups_monoids_groups_congruence_relation_and_quotient_structures_free_and_cyclic_monod_s_and_groups_permutation_groups_substructures_normal_subgroups_algebraic_structures_with_two_binary_operation_rings_integral_domain_and_fields_boolean_algebra_and_boolean_ring_identities_of_boolean_algebra_duality_representation_of_boolean_function_disjunctive_and_conjunctive_normal_form_module_5_lecture_10_hrs_graphs_and_trees_graphs_and_their_properties_degree_connectivity_path_cycle_sub_graph_isomorphism_eulerian_and_hamiltonian_walks_graph_coloring_coloring_maps_and_planar_graphs_coloring_vertices_coloring_edges_list_coloring_perfect_graph_definition_properties_and_example_rooted_trees_trees_and_sorting_weighted_trees_and_prefix_codes_biconnected_component_and_articulation_points_shortest_distances">Discrete Mathematics Objectives of the course Throughout the course, students will be expected to demonstrate their understanding of Discrete Mathematics by being able to do each of the following 1. Use mathematically correct terminology and notation 2. Construct correct direct and indirect proofs. 3. Use division into cases in a proof. 4. Use counter examples. 5. Apply logical reasoning to solve a variety of problems. Detailed contents: Module I Lecture 6 hrs. Sets. Relation and Function: Operations and Laws of Sets. Cartesian Products. Binary Relation. Partial Ordering Relation. Equivalence Relation. Image of a Set. Sum and Product of Functions, Bijective functions. Inverse and Composite Function. Size of a Set. Finite and Infinite Sets. Countable and uncountable Sets. Cantor\'s diagonal argument and The Power Set theorem. Schroeder-Bernstein theorem. Module 2 Lecture hrs. Principles of Mathematical Induction: The Well-Ordering Principle, Recursive definition. The Division algorithm: Prime Numbers. The Greatest Common Divisor: Euclidean Algorithm. The Fundamental Theorem of Arithmetic. Basic counting techniques-inclusion and exclusion. pigeon-hole principle. permutation and combination. Module 3 Lecture 8 hrs. Propositional Logic: Syntax. Semantics. Validity and Satisfiability. Basic Connectives and Truth Tables. Logical Equivalence: The Laws of Logic. Logical Implication. Rules of Inference. The use of Quantifiers. Proof Techniques: Some Terminology. Proof Methods and Strategies. Forward Proof Proof by Contradiction. Proof by Contraposition. Proof of Necessity and Sufficiency. Module 4 Lecture 8 hrs. Algebraic Structures and Morphism: Algebraic Structures with one Binary Operation. Semi Groups. Monoids. Groups. Congruence Relation and Quotient Structures. Free and Cyclic Monod\'s and Groups. Permutation Groups. Substructures. Normal Subgroups. Algebraic Structures with two Binary Operation. Rings. Integral Domain and Fields. Boolean Algebra and Boolean Ring. Identities of Boolean Algebra. Duality. Representation of Boolean Function. Disjunctive and Conjunctive Normal Form Module 5 Lecture 10 hrs Graphs and Trees: Graphs and their properties. Degree, Connectivity. Path. Cycle. Sub Graph. Isomorphism. Eulerian and Hamiltonian Walks. Graph Coloring. Coloring maps and Planar Graphs. Coloring Vertices. Coloring Edges. List Coloring, Perfect Graph, definition properties and Example. rooted trees, trees and sorting, weighted trees and prefix codes. Biconnected component and Articulation Points. Shortest distances.</string>
    <string name="computer_organization_and_architecture_objectives_of_the_course_to_expose_the_students_to_the_following_l_how_computer_systems_work_and_the_basic_principles_2_instruction_level_architecture_and_instruction_execution_3_the_current_state_of_art_in_memory_system_design_4_how_i_o_devices_are_accessed_and_its_principles_5_to_provide_the_knowledge_on_instruction_level_parallelism_6_to_impart_the_knowledge_on_microprogramming_7_concepts_of_advanced_pipelining_techniques_detailed_contents_module_1_lecture_10_hrs_functional_blocks_of_a_computer_cpu_memory_input_output_subsystems_control_unit_instruction_set_architecture_of_a_cpu_registers_instruction_execution_cycle_rtl_interpretation_of_instructions_addressing_modes_instruction_set_case_study_instruction_sets_of_some_common_cpus_data_representation_signed_number_representation_fixed_and_floating_point_representations_character_representation_computer_arithmetic_integer_addition_and_subtraction_ripple_carry_adder_carry_look_ahead_adder_etc_multiplication_shift_and_add_booth_multiplier_carry_save_multiplier_etc_division_restoring_and_non_restoring_techniques_floating_point_arithmetic_module_2_lecture_14_hrs_introduction_to_x86_architecture_cpu_control_unit_design_hardwired_and_micro_programmed_design_approaches_case_study_design_of_a_simple_hypothetical_cpu_memory_system_design_semiconductor_memory_technologies_memory_organization_peripheral_devices_and_their_characteristics_input_output_subsystems_i_o_device_interface_1_0_transfers_program_controlled_interrupt_driven_and_dma_privileged_and_non_privileged_instructions_software_interrupts_and_exceptions_programs_and_processes_role_of_interrupts_in_process_state_transitions_i_o_device_interfaces_scil_usb_module_3_lecture_10_hrs_pipelining_basic_concepts_of_pipelining_throughput_and_speedup_pipeline_hazards_parallel_processors_introduction_to_parallel_processors_concurrent_access_to_memory_and_cache_coherency_module_4_lecture_6_hrs_memory_organization_memory_interleaving_concept_of_hierarchical_memory_organization_cache_memory_cache_size_vs_block_size_mapping_functions_replacement_algorithms_write_polices">Computer Organization and Architecture Objectives of the course To expose the students to the following: L. How Computer Systems work and the basic principles 2. Instruction Level Architecture and Instruction Execution 3. The current state of art in memory system design 4. How I/O devices are accessed and its principles. 5. To provide the knowledge on Instruction Level Parallelism 6. To impart the knowledge on microprogramming 7. Concepts of advanced pipelining techniques. Detailed contents Module 1 Lecture 10 hrs. Functional blocks of a computer: CPU. memory, Input-output subsystems. control unit. Instruction set architecture of a CPU-registers. Instruction execution cycle. RTL interpretation of instructions. addressing modes. Instruction set. Case study-instruction sets of some common CPUs. Data representation: signed number representation. fixed and floating point representations, character representation. Computer arithmetic - integer addition and subtraction, ripple carry adder, carry look ahead adder, etc. multiplication -shift-and-add. Booth multiplier carry save multiplier etc. Division restoring and non-restoring techniques. floating point arithmetic. Module 2 Lecture 14 hrs. Introduction to x86 architecture. CPU control unit design: hardwired and micro- programmed design approaches. Case study design of a simple hypothetical CPU. Memory system design: semiconductor memory technologies. memory organization. Peripheral devices and their characteristics: Input-output subsystems. I/O device Interface. 1/0 transfers-program controlled. Interrupt driven and DMA. privileged and non-privileged Instructions, software interrupts and exceptions. Programs and processes-role of Interrupts in process state transitions. I/O device Interfaces-SCIL USB Module 3 Lecture 10 hrs. Pipelining: Basic concepts of pipelining throughput and speedup, pipeline hazards. Parallel Processors: Introduction to parallel processors. Concurrent access to memory and cache coherency. Module 4 Lecture 6 hrs. Memory organization: Memory interleaving, concept of hierarchical memory organization. cache memory, cache size vs. Block size, mapping functions, replacement algorithms, write polices</string>
    <string name="welcome_to_4th_semester">WELCOME TO 4TH SEMESTER</string>
    <string name="button3">Syllabus</string>
    <string name="textview">Computer Organisation Architecture

        <b>Module1</b>

        Functional blocks of a computer: CPU, memory, input-output subsystems, control unit, Instruction set architecture of a CPU - registers, Instruction execution cycle, RTL Interpretation of Instructions, addressing modes, Instruction set . Case study - instruction sets of some common CPUs.

        <b>Data representation :</b>signed number representation, fixed and floating point representations, character representation. Computer arithmetic - integer addition and subtraction, ripple carry adder, carry lock-ahead adder, etc. multiplication - shift-and-add, Booth multiplier , carry save multiplier , etc. Division restoring and non-restoring techniques, floating point arithmetic.

        <b>Module2</b>

        <b>Introduction to x86 architecture, CPU  control unit design:</b> hardwired and micro-programmed design approaches, Case study -design of a simple hypothetical CPU. Memory system design: semiconductor memory technologies, memory organization.

        <b>Peripheral devices and their characteristics:</b> Input-Output subsystems, I/O device interface, I/O transfers-program controlled, interrupt driven and DMA, privileged and non-interrupts in process states transitions, I/O device interfaces - SCII, USB.

        <b>Module3</b>














    </string>
    <string name="computer_organisation_and_architecture">Computer Organisation and Architecture</string>
    <string name="_4_semester_cse">4 SEMESTER CSE</string>
    <string name="topics">Topics</string>
    <string name="computer_organisation">coa</string>
</resources>