<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Syllabus1"
    android:id="@+id/rl"
    android:background="@drawable/img_1">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/cr1"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#E9B654"
        app:cardCornerRadius="30dp"
        android:paddingBottom="10dp"
        android:background="@drawable/aboveui">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/welcome_to_4th_semester"
                android:textColor="#5D4037" />

            <SearchView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tvb"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="100dp">

            </SearchView>


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvb"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/_4_semester_cse"
                android:textColor="#00695C"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="50sp"
                android:layout_marginBottom="2dp"
                android:text="@string/topics"
                android:textColor="#0D47A1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="120dp"
                android:layout_marginBottom="2dp"
                android:text="@string/button3"
                android:textColor="#FF090909"
                android:textSize="16sp"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:columnCount="3"
                app:rowCount="10"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cr2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="30dp">

                        <LinearLayout
                            android:id="@+id/cl1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="81dp"
                                android:layout_height="89dp"
                                android:layout_marginStart="32dp"
                                android:layout_marginBottom="5dp"
                                android:background="@drawable/both"
                                android:gravity="center"
                                android:text="@string/computer_organisation"
                                android:textAlignment="center"
                                android:textSize="40sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="40dp"
                                android:gravity="center"
                                android:text="@string/computer_organisation_and_architecture"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cr2"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="#2196F3"
                        android:text="@string/textview"
                        android:textColor="@color/hex_color"
                        android:textSize="16sp" />

                </RelativeLayout>
            </androidx.gridlayout.widget.GridLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>